--- a/website/HackTuesXI/myapp/templates/myapp/base.html
+++ b/website/HackTuesXI/myapp/templates/myapp/base.html
@@ -1,17 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Zabravih{% endblock %} </title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{% block title %}Zabravih{% endblock %}</title>
+	<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+	{% block style %}{% endblock %}
 </head>
 <body>
-    <div id='content'>
-        {% block content %}{% endblock%}
-    </div>
-    {% block script %}{% endblock  %}
-    {% block style %}{% endblock  %}
+	<header>
+		<h1>Zabravih</h1>
+	</header>
+	<main>
+		{% block content %}{% endblock %}
+	</main>
+	{% block script %}{% endblock %}
 </body>
 </html>
