some things fixed, just saving

--- a/website/HackTuesXI/myapp/templates/myapp/index.html
+++ b/website/HackTuesXI/myapp/templates/myapp/index.html
@@ -7,6 +7,7 @@
 <div class="card">
     <h2 id="status-cont">Status: <span id="session-status">Loading...</span></h2>
     <h1 id="timer">--:--</h1>
+    <h4 id="snz-timer>">--:--</h4>
     <button id="start-btn" onclick="startWork()">Start Work</button>
 </div>
 {% endblock %}
